--- a/neigh_df.ipynb
+++ b/neigh_df.ipynb
@@ -400,6 +400,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('neigh.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
